--- a/forms/docker-compose.yml
+++ b/forms/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres
     environment:
       POSTGRES_USER: claudiufurtea
-      POSTGRES_PASSWORD: Snooky2012
+      POSTGRES_PASSWORD: ********
       PGDATA: /data/potgres
     volumes:
       - db:/data/postgres
